--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "Portfolio to showcase some of the work I developed during my time in Laboratoria's bootcamp.",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
   "repository": {
@@ -23,5 +22,19 @@
   "bugs": {
     "url": "https://github.com/itsandromeda/Portfolio/issues"
   },
-  "homepage": "https://github.com/itsandromeda/Portfolio#readme"
+  "homepage": "https://github.com/itsandromeda/Portfolio#readme",
+  "dependencies": {
+    "express": "^4.15.3",
+    "jquery": "^3.2.1"
+  },
+  "devDependencies": {
+    "body-parser": "^1.17.2",
+    "bootstrap": "^3.3.7",
+    "browser-sync": "^2.18.12",
+    "gulp": "^3.9.1",
+    "gulp-browserify": "^0.5.1",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^3.1.0",
+    "owl.carousel": "^2.2.0"
+  }
 }
