--- a/package.json
+++ b/package.json
@@ -30,14 +30,12 @@
     },
     "homepage": "https://github.com/itsandromeda/Portfolio#readme",
     "devDependencies": {
-        "body-parser": "^1.17.2",
-        "bootstrap": "^3.3.7",
-        "browser-sync": "^2.18.12",
+        "body-parser": "^1.19.0",
+        "browser-sync": "^2.26.7",
         "gulp": "^3.9.1",
         "gulp-browserify": "^0.5.1",
         "gulp-concat": "^2.6.1",
         "gulp-rename": "^1.2.2",
-        "gulp-sass": "^3.1.0",
-        "owl.carousel": "^2.2.0"
+        "gulp-sass": "^4.0.2"
     }
 }
